# android-ar-plugin

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ar/arplugindemo/: ExampleInstrumentedTest.java
app/src/cpp/: calibrate_camera.cpp  detect_markers.cpp  estimate_pose.cpp  marshalling_API.cpp  openCVTest.cpp  utilities.cpp
app/src/cpp/include/: calibrate_camera.h  detect_markers.h  estimate_pose.h  marshalling_API.h  utilities.h
app/src/cpp/opencv-native/include/opencv2/: aruco.hpp  bioinspired.hpp  ccalib.hpp  dnn_superres.hpp  dpm.hpp  face.hpp  features2d.hpp  flann.hpp  fuzzy.hpp  hfs.hpp  highgui.hpp  img_hash.hpp  opencv.hpp  opencv_modules.hpp  optflow.hpp  phase_unwrapping.hpp  rapid.hpp  rgbd.hpp  sortSample.h  stereo.hpp  structured_light.hpp  superres.hpp  tracking.hpp  videoio.hpp  xfeatures2d.hpp
app/src/main/: AndroidManifest.xml
app/src/main/java/: main.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/ar/arplugindemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
